Sat Sep  4 04:54:34 2004  Tim Janik  <timj@gtk.org>

	* bsecore.idl: option cleanups. provide NOTE_*() macros for Note()
	properties.

	* bsetype.h: pspec constructor cleanups and adaptions.

	* bseinfo.c: provide octave info.

Fri Sep  3 14:30:34 2004  Tim Janik  <timj@gtk.org>

	* bsebus.[hc]: added store/restore support for ::inputs. made
	::inputs a GUI-only property.
	bse_bus_connect(): check the input object against our candidate list.
	bse_bus_connect_unchecked(): connect without checking against candidate
	list.

	* bsestorage.c: process item links in the order they were parsed in.

Fri Sep  3 03:12:49 2004  Tim Janik  <timj@gtk.org>

	* zintern/mono-wave.bse: remove useless wave-repo. fixed synth name.

Thu Sep  2 22:50:43 2004  Tim Janik  <timj@gtk.org>

	* bsetrack.[hc]: derive from BSeContextMerger. this turns BseTrack
	into a BseSource, including preparation and reset. this gets rid of
	a bunch of special cases and state related buglets.

	* bsesubiport.[hc]:
	* bsesuboport.[hc]: prepare for derived objects with varying
	numbers of input and output channels. some cleanups.

	* bsesubsynth.[hc]: dito. move premature releasing of port
	names to finalize.

	* bsesource.[hc]: added bse_source_class_inherit_channels().

	* bsesong.c: adapt to BseTrack is_a BseSource now.

	* bsesnet.c: cleanups. report i/o port leaks at finalization
	time, as ports may be left at bse_snet_release_children() from
	inetrnal children.

	* bseinstrumentoutput.c:
	* bseinstrumentinput.c: adaptions, cleanups.

Thu Sep  2 04:14:29 2004  Tim Janik  <timj@gtk.org>

	* bsebus.[hc]: added ::mute, ::solo and ::sync properties.
	implement bse_bus_editable_property() to toggle ::solo
	editability for master bus. moved song<->master connection 
	logic here.

	* bsebusmodule.cc: special case left/right volume factors of
	0 (BSE_MIN_VOLUME_dB) to set constant 0 outputs.

	* bsesong.c: support solo busses.

	* bseitem.proc: provide bse-item-editable-property() to figure