@@ -37,6 +37,7 @@ enum
 {
   PROP_0,
   PROP_INPUTS,
+  PROP_OUTPUTS,
   PROP_SNET,
   PROP_MUTE,
   PROP_SOLO,
@@ -73,6 +74,8 @@ bse_bus_dispose (GObject *object)
     bse_bus_disconnect (self, self->inputs->data);
   /* chain parent class' handler */
   G_OBJECT_CLASS (bus_parent_class)->dispose (object);
+
+  g_assert (self->bus_outputs == NULL);
 }
 
 static void
@@ -80,6 +83,7 @@ bse_bus_finalize (GObject *object)
 {
   BseBus *self = BSE_BUS (object);
   g_assert (self->inputs == NULL);
+  g_assert (self->bus_outputs == NULL);
   g_assert (self->summation == NULL);
   /* chain parent class' handler */
   G_OBJECT_CLASS (bus_parent_class)->finalize (object);
@@ -98,8 +102,8 @@ get_master (BseBus *self)
 }
 
 static void
-bus_list_candidates (BseBus     *self,
-                     BseItemSeq *iseq)
+bus_list_input_candidates (BseBus     *self,
+                           BseItemSeq *iseq)
 {
   BseItem *item = BSE_ITEM (self);
   bse_item_gather_items_typed (item, iseq, BSE_TYPE_BUS, BSE_TYPE_SONG, FALSE);
@@ -107,6 +111,14 @@ bus_list_candidates (BseBus     *self,
   BseBus *master = get_master (self);
   if (master)
     bse_item_seq_remove (iseq, BSE_ITEM (master));
+}
+
+void
+bse_bus_or_track_list_output_candidates (BseItem    *trackbus,
+                                         BseItemSeq *iseq)
+{
+  if (BSE_IS_BUS (trackbus) || BSE_IS_TRACK (trackbus))
+    bse_item_gather_items_typed (trackbus, iseq, BSE_TYPE_BUS, BSE_TYPE_SONG, FALSE);
 }
 
 static void
@@ -121,13 +133,22 @@ bse_bus_get_candidates (BseItem               *item,
       SfiRing *ring;
     case PROP_INPUTS:
       bse_property_candidate_relabel (pc, _("Available Inputs"), _("List of available synthesis signals to be used as bus input"));
-      bus_list_candidates (self, pc->items);
+      bus_list_input_candidates (self, pc->items);
+      /* remove existing inputs from candidates */
       ring = bse_bus_list_inputs (self);
       while (ring)
         bse_item_seq_remove (pc->items, sfi_ring_pop_head (&ring));
       /* SYNC: type partitions */
       bse_type_seq_append (pc->partitions, "BseTrack");
       bse_type_seq_append (pc->partitions, "BseBus");
+      break;
+    case PROP_OUTPUTS:
+      bse_property_candidate_relabel (pc, _("Available Outputs"), _("List of available mixer busses to be used as bus output"));
+      bse_bus_or_track_list_output_candidates (BSE_ITEM (self), pc->items);
+      /* remove existing outputs */
+      ring = bse_bus_list_outputs (self);
+      while (ring)
+        bse_item_seq_remove (pc->items, sfi_ring_pop_head (&ring));
       break;
     case PROP_SNET:
       break;
@@ -147,6 +168,7 @@ bse_bus_editable_property (BseObject      *object,
     {
       BseItem *parent;
     case PROP_SOLO:
+    case PROP_OUTPUTS:
       parent = BSE_ITEM (self)->parent;
       if (BSE_IS_SONG (parent))
         {
@@ -213,6 +235,47 @@ bus_volume_changed (BseBus *self)
     }
 }
 
+void
+bse_bus_or_track_set_outputs (BseItem        *trackbus,
+                              BseItemSeq     *outputs_iseq)
+{
+  SfiRing **pbus_outputs;
+  /* handle object types */
+  if (BSE_IS_BUS (trackbus))
+    pbus_outputs = &BSE_BUS (trackbus)->bus_outputs;
+  else if (BSE_IS_TRACK (trackbus))
+    pbus_outputs = &BSE_TRACK (trackbus)->bus_outputs;
+  else
+    return;
+  /* save user provided order */
+  SfiRing *saved_outputs = bse_item_seq_to_ring (outputs_iseq);
+  /* provide sorted rings: bus_outputs, outputs */
+  SfiRing *outputs = sfi_ring_sort (sfi_ring_copy (saved_outputs), sfi_compare_pointers, NULL);
+  *pbus_outputs = sfi_ring_sort (*pbus_outputs, sfi_compare_pointers, NULL);
+  /* get all output candidates */
+  BseItemSeq *iseq = bse_item_seq_new();
+  bse_bus_or_track_list_output_candidates (trackbus, iseq);
+  SfiRing *candidates = sfi_ring_sort (bse_item_seq_to_ring (iseq), sfi_compare_pointers, NULL);
+  bse_item_seq_free (iseq);
+  /* constrain the new output list */
+  SfiRing *ring = sfi_ring_intersection (outputs, candidates, sfi_compare_pointers, NULL);
+  sfi_ring_free (candidates);
+  sfi_ring_free (outputs);
+  outputs = ring;
+  /* remove stale outputs */
+  ring = sfi_ring_difference (*pbus_outputs, outputs, sfi_compare_pointers, NULL);
+  while (ring)
+    bse_bus_disconnect (sfi_ring_pop_head (&ring), trackbus);
+  /* add new outputs */
+  ring = sfi_ring_difference (outputs, *pbus_outputs, sfi_compare_pointers, NULL);
+  while (ring)
+    bse_bus_connect_unchecked (sfi_ring_pop_head (&ring), trackbus);
+  sfi_ring_free (outputs);
+  /* restore user provided order */
+  *pbus_outputs = sfi_ring_reorder (*pbus_outputs, saved_outputs);
+  sfi_ring_free (saved_outputs);
+}
+
 static void
 bse_bus_set_property (GObject      *object,
                       guint         param_id,
@@ -233,7 +296,7 @@ bse_bus_set_property (GObject      *object,
       self->inputs = sfi_ring_sort (self->inputs, sfi_compare_pointers, NULL);
       /* get all input candidates */
       iseq = bse_item_seq_new();
-      bus_list_candidates (self, iseq);
+      bus_list_input_candidates (self, iseq);
       candidates = sfi_ring_sort (bse_item_seq_to_ring (iseq), sfi_compare_pointers, NULL);
       bse_item_seq_free (iseq);
       /* constrain the new input list */
@@ -241,7 +304,7 @@ bse_bus_set_property (GObject      *object,
       sfi_ring_free (candidates);
       sfi_ring_free (inputs);
       inputs = ring;
-      /* eliminate stale inputs */
+      /* remove stale inputs */
       ring = sfi_ring_difference (self->inputs, inputs, sfi_compare_pointers, NULL);
       while (ring)
         bse_bus_disconnect (self, sfi_ring_pop_head (&ring));
@@ -253,6 +316,9 @@ bse_bus_set_property (GObject      *object,
       /* restore user provided order */
       self->inputs = sfi_ring_reorder (self->inputs, saved_inputs);
       sfi_ring_free (saved_inputs);
+      break;
+    case PROP_OUTPUTS:
+      bse_bus_or_track_set_outputs (BSE_ITEM (self), g_value_get_boxed (value));
       break;
     case PROP_SNET:
       g_object_set_property (G_OBJECT (self), "BseSubSynth::snet", value);
@@ -347,6 +413,15 @@ bse_bus_get_property (GObject    *object,
         bse_item_seq_append (iseq, sfi_ring_pop_head (&ring));
       g_value_take_boxed (value, iseq);
       break;
+    case PROP_OUTPUTS:
+      iseq = bse_item_seq_new();
+      ring = bse_bus_list_outputs (self);
+      while (ring)
+        bse_item_seq_append (iseq, sfi_ring_pop_head (&ring));
+      if (!ring && get_master (self) == self)
+        bse_item_seq_append (iseq, BSE_ITEM (self)->parent);    /* requires proxy_notifies on parent */
+      g_value_take_boxed (value, iseq);
+      break;
     case PROP_SNET:
       g_object_get_property (G_OBJECT (self), "BseSubSynth::snet", value);
       break;
@@ -406,8 +481,14 @@ bse_bus_set_parent (BseItem *item,
   BseBus *self = BSE_BUS (item);
   self->solo_muted = FALSE;
 
+  if (item->parent)
+    bse_object_unproxy_notifies (item->parent, self, "notify::outputs");
+
   /* chain parent class' handler */
   BSE_ITEM_CLASS (bus_parent_class)->set_parent (item, parent);
+
+  if (item->parent)
+    bse_object_proxy_notifies (item->parent, self, "notify::outputs");
 
   while (self->inputs)
     bse_bus_disconnect (self, self->inputs->data);
@@ -525,6 +606,22 @@ bse_bus_ensure_summation (BseBus *self)
 }
 
 static void
+trackbus_update_outputs (BseItem *trackbus,
+                         BseBus  *added,
+                         BseBus  *removed)
+{
+  SfiRing *outputs = BSE_IS_TRACK (trackbus) ? BSE_TRACK (trackbus)->bus_outputs : BSE_BUS (trackbus)->bus_outputs;
+  if (removed)
+    outputs = sfi_ring_remove (outputs, removed);
+  if (added)
+    outputs = sfi_ring_append (outputs, added);
+  if (BSE_IS_TRACK (trackbus))
+    BSE_TRACK (trackbus)->bus_outputs = outputs;
+  else
+    BSE_BUS (trackbus)->bus_outputs = outputs;
+}
+
+static void
 bus_uncross_input (BseItem *owner,
                    BseItem *item)
 {
@@ -541,7 +638,7 @@ bse_bus_connect (BseBus  *self,
 {
   /* get all input candidates */
   BseItemSeq *iseq = bse_item_seq_new();
-  bus_list_candidates (self, iseq);
+  bus_list_input_candidates (self, iseq);
   /* find trackbus */
   gboolean found_candidate = FALSE;
   guint i;
@@ -578,10 +675,12 @@ bse_bus_connect_unchecked (BseBus  *self,
     {
       bse_source_must_set_input (self->summation, 1, osource, 1);
       self->inputs = sfi_ring_append (self->inputs, trackbus);
-      bse_item_cross_link (BSE_ITEM (self), BSE_ITEM (trackbus), bus_uncross_input);
+      trackbus_update_outputs (trackbus, self, NULL);
       bse_object_proxy_notifies (trackbus, self, "notify::inputs");
+      bse_object_proxy_notifies (self, trackbus, "notify::outputs");
+      bse_item_cross_link (BSE_ITEM (self), BSE_ITEM (trackbus), bus_uncross_input);
       g_object_notify (self, "inputs");
-      // FIXME: g_object_notify (osource, "outputs");
+      g_object_notify (trackbus, "outputs");
     }
   return error;
 }
@@ -600,12 +699,14 @@ bse_bus_disconnect (BseBus  *self,
   if (!osource || !self->summation || !sfi_ring_find (self->inputs, trackbus))
     return BSE_ERROR_SOURCE_PARENT_MISMATCH;
   bse_object_unproxy_notifies (trackbus, self, "notify::inputs");
+  bse_object_unproxy_notifies (self, trackbus, "notify::outputs");
   bse_item_cross_unlink (BSE_ITEM (self), BSE_ITEM (trackbus), bus_uncross_input);
   self->inputs = sfi_ring_remove (self->inputs, trackbus);
+  trackbus_update_outputs (trackbus, NULL, self);
   BseErrorType error1 = bse_source_unset_input (self->summation, 0, osource, 0);
   BseErrorType error2 = bse_source_unset_input (self->summation, 1, osource, 1);
   g_object_notify (self, "inputs");
-  // FIXME: g_object_notify (osource, "outputs");
+  g_object_notify (trackbus, "outputs");
   return error1 ? error1 : error2;
 }
 
@@ -618,17 +719,7 @@ bse_bus_list_inputs (BseBus *self)
 SfiRing*
 bse_bus_list_outputs (BseBus *self)
 {
-  BseItem *parent = BSE_ITEM (self)->parent;
-  SfiRing *outputs = NULL;
-  if (BSE_IS_SONG (parent))
-    {
-      BseSong *song = BSE_SONG (parent);
-      SfiRing *ring;
-      for (ring = song->busses; ring; ring = sfi_ring_walk (ring, song->busses))
-        if (ring->data != self && sfi_ring_find (BSE_BUS (ring->data)->inputs, self))
-          outputs = sfi_ring_append (outputs, ring->data);
-    }
-  return outputs;
+  return sfi_ring_copy (self->bus_outputs);
 }
 
 static void
@@ -753,6 +844,11 @@ bse_bus_class_init (BseBusClass *class)
                                                      * to be preserved to match the GUI order of displayed objects.
                                                      */
                                                     _("Synthesis signals (from tracks and busses) used as bus input"),
+                                                    BSE_TYPE_ITEM_SEQ, SFI_PARAM_GUI ":item-sequence"));
+  bse_object_class_add_param (object_class, _("Signal Outputs"),
+                              PROP_OUTPUTS,
+                              bse_param_spec_boxed ("outputs", _("Output Signals"),
+                                                    _("Mixer busses used as output for synthesis signals"),
                                                     BSE_TYPE_ITEM_SEQ, SFI_PARAM_GUI ":item-sequence"));
   bse_object_class_add_param (object_class, NULL, PROP_SNET, bse_param_spec_object ("snet", NULL, NULL, BSE_TYPE_CSYNTH, SFI_PARAM_READWRITE ":skip-undo"));
   bse_object_class_add_param (object_class, _("Internals"),
