@@ -1,3 +1,12 @@
+Mon Sep  6 09:13:05 2004  Tim Janik  <timj@gtk.org>
+
+	* bsebus.[hc]: implemented ::outputs property. provided logic in
+	functions that may be shared with BseTrack. proxy notifies from
+	parent for master bus.
+
+	* bsetrack.[hc]: implemented ::outputs property based on functions
+	provided by bsebus.[hc].
+
 Sat Sep  4 04:54:34 2004  Tim Janik  <timj@gtk.org>
 
 	* bsecore.idl: option cleanups. provide NOTE_*() macros for Note()
